# svpm

./: README.md  hatch.toml  pyproject.toml
src/svpm/: cli.py
